--- a/styles/main.css
+++ b/styles/main.css
@@ -192,6 +192,10 @@ body {
   /*background: transparent;*/
 }
 
+body.left {
+  cursor: url("/images/select-left.cur"), auto;
+}
+
 /* =========== HEADER AND LOGO=========== */
 .header {
   background-color: var(--clr-ui-bg);
